--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
     <title>Crowfall Powers Index</title>
 </head>
-<body>   
+
+<body>
+    <h1 id="class-title" class="header-title">Classes</h1>
+    <section class="class-section">
     <div class="class-icon">        
         <div><h1>Assassin</h1><a href="assassin.html" target="_blank"><img src="images/Class/UI_ClassOutline_Assassin.png" width="250rem" height="250rem"></a></div>
     </div>
@@ -42,6 +45,91 @@
     </div>
     <div class="class-icon">        
         <div><h1>Templar</h1><a href="templar.html" target="_blank"><img src="images/Class/UI_ClassOutline_Templar.png" width="250rem" height="250rem"></a></div>
-    </div>        
+    </div>
+</section> 
+<h1 id="race-title" class="header-title">Races</h1>
+<section class="race-section">
+    <div class="race-icon">        
+        <div><h1>Centaur</h1><a href="centaur.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Centaur_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Elken</h1><a href="elken.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Elken_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Fae</h1><a href="fae.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Fae_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Half Elf</h1><a href="half-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Elf_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Half Giant</h1><a href="half-giant.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Giant_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>High Elf</h1><a href="high-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_High-Elf_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Human</h1><a href="human.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Human_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Minotaur</h1><a href="minotaur.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Minotaur_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Nethari</h1><a href="nethari.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Nethari_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Stoneborn</h1><a href="stoneborn.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Stoneborn_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+    <div class="race-icon">        
+        <div><h1>Wood Elf</h1><a href="wood-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Wood-Elf_01.png" width="215rem" height="215rem"></a></div>
+    </div>
+</section>
+<h1 id="domains-title" class="header-title">Domains</h1>
+<section class="domains-section">    
+    <div class="domains-icon">        
+        <div><h1>Battle</h1><a href="battle.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Battle.png" width="110rem" height="110rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Dark</h1><a href="dark.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Dark.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Death</h1><a href="death.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Death.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Fire</h1><a href="fire.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Fire.png" width="135rem" height="135rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Frost</h1><a href="frost.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Frost.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Justice</h1><a href="justice.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Justice.png" width="135rem" height="135rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Light</h1><a href="light.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Light.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Music</h1><a href="music.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Music.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Nature</h1><a href="nature.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Nature.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Plague</h1><a href="plague.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Plague.png" width="150rem" height="150rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Protection</h1><a href="protection.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Protection.png" width="135rem" height="135rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Shadow</h1><a href="shadow.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Shadow.png" width="135rem" height="135rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Storm</h1><a href="storm.html" target="_blank"><img src="images/Domains/UI_Icon_Storm.png" width="135rem" height="135rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>War</h1><a href="war.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_War.png" width="125rem" height="125rem"></a></div>
+    </div>
+    <div class="domains-icon">        
+        <div><h1>Wind</h1><a href="wind.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Wind.png" width="125rem" height="125rem"></a></div>
+    </div>
+</section>          
 </body>
 </html>
