--- a/frostweaver.html
+++ b/frostweaver.html
@@ -1364,7 +1364,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="blizzard">BLizzard</h2>            
+                    <h2 id="blizzard">Blizzard</h2>            
                     <img src="images/Powers/frst-passive-bitter-cold.png">
                 </div>                           
             </div>
@@ -1527,7 +1527,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="re-fridgerate">Re-Fridgerate</h2>            
+                    <h2 id="re-fridgerate">Re Fridgerate</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_Re-Fridgerate_01.png">
                 </div>                           
             </div>
