--- a/frostweaver.html
+++ b/frostweaver.html
@@ -1365,7 +1365,7 @@
             <div class="header-class-powers">
                 <div>
                     <h2 id="blizzard">Blizzard</h2>            
-                    <img src="images/Powers/frst-passive-bitter-cold.png">
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WaterBeatsFire.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
@@ -1980,7 +1980,7 @@
     <div class="container-major">        
         <div class="header-major">
             <div>
-                <h2 id="defender">Friar</h2>            
+                <h2 id="friar">Friar</h2>            
                 <img src="images/Discipline/Major/Icon_Disc_Major_Friar.png">
             </div>
             <div>
@@ -1995,20 +1995,199 @@
                     <div>
                         <h3>Chain Heal</h3>
                         <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                        <p>heals a targeted ally for 83 Health and then chains to an additional nearby ally
+                        <p>Heals a targeted ally for 83 Health and then chains to an additional nearby ally
                             that is 30% less effective.
                         </p>
                     </div>
                     <div>
                         <h3>Fortuitous Blessings</h3>
                         <img src="images/Powers/Icon_Powers_Graphic_Disc_FortuitiousBlessings.png">
-                        <p>periodically gain movement speed, recource regeneration or support power
+                        <p>Periodically gain movement speed, recource regeneration or support power
                             based on your actions.
                         </p>
                     </div>                                       
             </div>                                            
         </div>                                               
     </div>
+    <div class="container-major">        
+        <div class="header-major">
+            <div>
+                <h2 id="frozen-dancer">Frozen Dancer</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_FrozenDancer.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Frostweaver, Frost</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Armor Penetration: Ice +2%</p>
+                <p>Ice Damage Bonus: +2%</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Frigid Ground</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Frst_FreezingBlast.png">
+                        <p>Sends out a line of ice, dealing 74 Ice damage to up to 5 enemies and applies
+                            Frostbite.<br><br>
+                            Frostbite causes 75 Ice damage seven times over 14 seconds.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Harsh Elements</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_Frostguard_01.png">
+                        <p>Applies an Ice Resistance debuff for 15 when you apply a Frostbite to an
+                            enemy.
+                        </p>
+                    </div>                                       
+            </div>                                            
+        </div>                                               
+    </div>
+    <div class="container-major">        
+        <div class="header-major">
+            <div>
+                <h2 id="ice-armorer">Ice Armorer</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_IceArmorer.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Frostweaver</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Armor Penetration: Ice: +2%</p>
+                <p>Ice Resistance: +300</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Ice Armory</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_FrostArmory_01.png">
+                        <p>Creates Frost Armor wich can last for 180 seconds.<br><br>
+                            Frost Armor can be picked up by allies and you to add 3500 Armor. Ice Armory will create
+                            a number of Frost Armors equal to your Max Ice Storage if you ahev an available Ice to
+                            spend when cast. It lasts until you zone or until you take damage and then up to 15 seconds after the damage. Each hit adds
+                            one Frost Armor Crack counter (one per 1/2 second max) and the effect ends if you are
+                            hit after your third Frost Armor Crack.<br><br>                            
+                            Your Ice Storage Capacity determines the number of Ice you may have active simultaneously
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Ice Devourer</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_WaterBeatsFire.png">
+                        <p>Grants various effects when Ice damage is taken. Heals you for 25% of the damage 
+                            taken and applies a stack of Ice Devoured granting Personal Healing Modiefier by
+                            5% for 15 per stack, up to three stacks.
+                        </p>
+                    </div>                                       
+            </div>                                            
+        </div>                                               
+    </div>
+    <div class="container-major">        
+        <div class="header-major">
+            <div>
+                <h2 id="paragon">Paragon</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_Paragon.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Frostweaver, Guinecean, Justice, Battle</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Anti Critical Strike: +3%</p>
+                <p>Health: +500</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Rehabilitation</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Rehabilitation.png">
+                        <p>Tends to your wounds healing for 500 three times over six seconds. This ability
+                            does not scale with support power.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Vengeful Aura</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Cleric_VengefulAura.png">
+                        <p>Fortifies group members and you with otherworldly strenght increasing their Attack
+                            Power by 75 while you maintain the effect.
+                        </p>
+                    </div>                                       
+            </div>                                            
+        </div>                                               
+    </div>
+    <div class="container-major">        
+        <div class="header-major">
+            <div>
+                <h2 id="pixie">Pixie</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_Pixie.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Frostweaver, Light, Nature, Storm</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Critical Healing Chance: +2%</p>
+                <p>Healing Bonus: +3%</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Soothing Winds</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_SoothingWinds.png">
+                        <p>Heals a targeted ally and chains to another ally for 17 additional healing over 
+                            time.<br><br>
+                            The Chain Healing Bonus Jumps statistic causes additional jumps past the initial
+                            jump. Each jump past 2 targets, the healing is reduced by 30% per target, to
+                            a maximum of a 60% reduction.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Pix Fix</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_PixFix.png">
+                        <p>Gains one additional target for all chain type healing abilities and removes the
+                            healing falloff per target.
+                        </p>
+                    </div>                                       
+            </div>                                            
+        </div>                                               
+    </div>
+    <div class="container-major">        
+        <div class="header-major">
+            <div>
+                <h2 id="siege-engineer">Siege Engineer</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_SiegeEngineer.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Eternal Crow</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Health: +500</p>
+                <p>Physical Resistance: +300</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                <div>
+                    <h3>Shield Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_ShieldSiegeEngine.png">                        
+                    <p>Reduces damage taken by Siege Engines in the area by 90%. 
+                    </p>
+                </div>
+                <div>
+                    <h3>Bolster Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_BolsterSiegeEngine.png">
+                    <p>Empowers a targeted Siege Engine adding 100% Damage Bonus.
+                    </p>
+                </div>
+                <div>
+                    <h3>Repair Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_RepairSiegeEngine.png">
+                    <p>Repairs a targeted Siege Engine.
+                    </p>
+                </div>
+                <h3>Recipes Granted</h3>
+                <p>Ballista<br>
+                Catapult<br>
+                Trebuchet
+                </p>                
+            </div>
+        </div>    
+    </div>    
 </section>
 
 <h1 class="sub-header" id="minors">Minors</h1>
