--- a/templar.html
+++ b/templar.html
@@ -134,3 +134,9 @@
             </div>    
                 <p class="info">Stealth:<br>Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
         </div>
+    </section>
+</body>
+<footer>
+    <h6>This material is used with the limited permission of ArtCraft Entertainment. No official affiliation or endorsement by ArtCraft Entertainment is stated or implied.</h6>
+</footer>
+</html>
