--- a/frostweaver.html
+++ b/frostweaver.html
@@ -537,7 +537,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="shape-alliance">Shape-Alliance</h2>            
+                    <h2 id="shape-alliance">Shape Alliance</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_ShapeAlliance_01.png">
                 </div>                           
             </div>
@@ -645,7 +645,7 @@
             <div class="header-class-powers">
                 <div>
                     <h2 id="cool-ice-weave">Cool Ice Weave</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_coolIceWeave_01.png">
+                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_CoolIceWeave_01.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
@@ -814,7 +814,7 @@
             <div class="header-class-powers">
                 <div>
                     <h2 id="volatile-focus">Volatile Focus</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_volatileFocus_01.png">
+                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_VolatileFocus_01.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
@@ -869,7 +869,7 @@
             <div class="header-class-powers">
                 <div>
                     <h2 id="refreshing-focus">Refreshing Focus</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_refreshingFocus_01.png">
+                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_RefreshingFocus_01.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
@@ -924,7 +924,7 @@
             <div class="header-class-powers">
                 <div>
                     <h2 id="cooling-focus">Cooling Focus</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_coolingFocus_01.png">
+                    <img src="images/Powers/Icon_Powers_Graphic_FrostWeaver_CoolingFocus_01.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
