Added domains and html

--- a/index.html
+++ b/index.html
@@ -86,49 +86,49 @@
 <h1 id="domains-title" class="header-title">Domains</h1>
 <section class="domains-section">    
     <div class="domains-icon">        
-        <div><h1>Battle</h1><a href="battle.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Battle.png" width="110rem" height="110rem"></a></div>
+        <div><h1>Battle</h1><a href="domains/battle.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Battle.png" width="110rem" height="110rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Dark</h1><a href="dark.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Dark.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Dark</h1><a href="domains/dark.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Dark.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Death</h1><a href="death.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Death.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Death</h1><a href="domains/death.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Death.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Fire</h1><a href="fire.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Fire.png" width="135rem" height="135rem"></a></div>
+        <div><h1>Fire</h1><a href="domains/fire.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Fire.png" width="135rem" height="135rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Frost</h1><a href="frost.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Frost.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Frost</h1><a href="domains/frost.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Frost.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Justice</h1><a href="justice.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Justice.png" width="135rem" height="135rem"></a></div>
+        <div><h1>Justice</h1><a href="domains/justice.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Justice.png" width="135rem" height="135rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Light</h1><a href="light.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Light.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Light</h1><a href="domains/light.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Light.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Music</h1><a href="music.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Music.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Music</h1><a href="domains/music.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Music.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Nature</h1><a href="nature.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Nature.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Nature</h1><a href="domains/nature.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Nature.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Plague</h1><a href="plague.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Plague.png" width="150rem" height="150rem"></a></div>
+        <div><h1>Plague</h1><a href="domains/plague.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Plague.png" width="150rem" height="150rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Protection</h1><a href="protection.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Protection.png" width="135rem" height="135rem"></a></div>
+        <div><h1>Protection</h1><a href="domains/protection.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Protection.png" width="135rem" height="135rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Shadow</h1><a href="shadow.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Shadow.png" width="135rem" height="135rem"></a></div>
+        <div><h1>Shadow</h1><a href="domains/shadow.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Shadow.png" width="135rem" height="135rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Storm</h1><a href="storm.html" target="_blank"><img src="images/Domains/UI_Icon_Storm.png" width="135rem" height="135rem"></a></div>
+        <div><h1>Storm</h1><a href="domains/storm.html" target="_blank"><img src="images/Domains/UI_Icon_Storm.png" width="135rem" height="135rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>War</h1><a href="war.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_War.png" width="125rem" height="125rem"></a></div>
+        <div><h1>War</h1><a href="domains/war.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_War.png" width="125rem" height="125rem"></a></div>
     </div>
     <div class="domains-icon">        
-        <div><h1>Wind</h1><a href="wind.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Wind.png" width="125rem" height="125rem"></a></div>
+        <div><h1>Wind</h1><a href="domains/wind.html" target="_blank"><img src="images/Domains/UI_Skill_Icon_Wind.png" width="125rem" height="125rem"></a></div>
     </div>
 </section>          
 </body>
