--- a/domains/battle.html
+++ b/domains/battle.html
@@ -12,7 +12,7 @@
 
 <nav>
     <ul>
-        <li><a href="crowfall-powers\index.html">Index</a></li>
+        <li><a href="crowfall-powers/index.html">Index</a></li>
         <li><a href="battle.html">Battle</a></li>
         <li><a href="dark.html">Dark</a></li>
         <li><a href="death.html">Death</a></li>
