--- a/plague.html
+++ b/plague.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles_domains.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
-    <title>Crowfall Domains Wind</title>
+    <title>Crowfall Domains Plague</title>
 </head>
 
 <nav>
     <ul>
-        <li><a href="/index.html">Index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="battle.html">Battle</a></li>
         <li><a href="dark.html">Dark</a></li>
         <li><a href="death.html">Death</a></li>
