--- a/elken.html
+++ b/elken.html
@@ -29,7 +29,7 @@
 <body>
     <div class="race-container">
         <div class="race-image"><img src="images/Race/UI_Icon_CharCreate_Race_Elken_01.png" width="250rem" height="250rem"></div>
-        <div class="race-name"><h1>Centaur</h1></div>
+        <div class="race-name"><h1>Elken</h1></div>
         <div class="race-classes"><h2>Available Classes</h2></div>
         <div class="container-class-icons">    
             <div>
