--- a/elken.html
+++ b/elken.html
@@ -42,10 +42,10 @@
                 <a href="knight.html" target="_blank"><img src="images/Class/CF_Class_knight.png"><div>Knight</div></a>
             </div>
             <div>
-                <a href="ranger.html" target="_blank"><img src="images/Class/CF_Class_ranger.png"><div>Knight</div></a>
+                <a href="ranger.html" target="_blank"><img src="images/Class/CF_Class_ranger.png"><div>Ranger</div></a>
             </div>
             <div>
-                <a href="templar.html" target="_blank"><img src="images/Class/CF_Class_templar.png"><div>Knight</div></a>
+                <a href="templar.html" target="_blank"><img src="images/Class/CF_Class_templar.png"><div>Templar</div></a>
             </div>                     
         </div>   
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
